<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task1">Add Task</string>
    <string name="textview">All Tasks</string>
    <string name="taskmaster">TaskMaster</string>
    <string name="tasks_count">Tasks Count :</string>
    <string name="do_something">do_something</string>
    <string name="task_description">task_description</string>
    <string name="my_task">my_task</string>
    <string name="task_title">task_title</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="enter_your_name">Enter your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskOrgs">taskOrgs</string>
    <string name="state">state</string>
    <string name="body">body</string>
    <string name="title">Title</string>
    <string name="channel_name">TASKKKKKMASSSTEERRR</string>
    <string name="channel_description">Notifications for TASKKKKKMASSSTEERRR</string>
</resources>