<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    tools:context=".TaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/titleFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/bodyFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/titleFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.338"
            app:layout_constraintStart_toEndOf="@+id/titleFragment"
            app:layout_constraintTop_toTopOf="@+id/titleFragment"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/stateFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bodyFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toEndOf="@+id/bodyFragment"
            app:layout_constraintTop_toTopOf="@+id/bodyFragment"
            app:layout_constraintVertical_bias="0.065" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>